create controller and view

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,10 @@
   <h1>My Tasks</h1>
   <ul>
     <% @tasks.each do |task| %>
-      <li><%= task.title %></li>
+      <li><%= link_to task.title, task_path(task) %></li>
     <% end %>
   </ul>
-
+  <br>
+  <hr>
+  <button><%= link_to "New task", tasks_new_path %></button>
 </div>
