--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,16 @@
 <div>
-  <h1><%= @tasks.title %></h1>
-  <h2><%= @tasks.details %></h2>
+  <h1><%= @task.title %></h1>
+  <h2><%= @task.details %></h2>
   <br>
+  <div>
+    <button> <%= link_to "Edit", edit_task_path %></button>
+  </div>
+  <div>
+    <button><%= link_to "Delete",
+      destroy_task_path,
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
+    </button>
+  </div>
   <hr>
-  <%= link_to "Back to Tasks", tasks_path %>
+  <button><%= link_to "Back to Tasks", tasks_path %></button>
 </div>
