--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,11 @@
 <div>
   <h1>My Tasks</h1>
   <ul>
-    <% @tasks.each do |task| %>
+    <% @task.each do |task| %>
       <li><%= link_to task.title, task_path(task) %></li>
     <% end %>
   </ul>
   <br>
   <hr>
-  <button><%= link_to "New task", tasks_new_path %></button>
+  <button><%= link_to "New task", new_task_path %></button>
 </div>
